Added Owner Controller Unit Test. Closed #52